style.css
/*----------------------------------------
### General
----------------------------------------*/

:root {
  --primary: #EB2248; 
  --title: #121212;
  --text: #555555;
  --bg-light: #f9f8f7;
  --bg-dark: #000;
}

* {
  scroll-behavior: smooth;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-size: 16px;
}

body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  color: var(--text);
  background: var(--bg-light);
}

a {
  color: var(--text);
  text-decoration: none !important;
  cursor: pointer;
  text-align: center;
}

a:hover {
  color: var(--primary);
  text-decoration: none;
  cursor: pointer
}

/*ul {
  list-style: none;
}*/

h1,
h2, 
h3,
h4,
h5,
h6 {
  font-family: 'Kanit', sans-serif;
}

h1 {
  margin-bottom: 2rem;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 50px;
  letter-spacing: 0em;
  text-align: left;
  color: var(--title);
  text-transform: uppercase;
  letter-spacing: 4px;
}

p {
  margin-top: 0;
  line-height: 1.5rem;
}

input:focus,input.active {
  outline: none;
}

/*----------------------------------------
### Special classes & components
----------------------------------------*/

.container {
  overflow-y: auto;
}

.section {
  padding: 2.5rem 1rem;
  height: auto;
}

.container::-webkit-scrollbar {
  display: none;
}

.primary-button {
  margin-top: 2rem;
  position: relative;
  border: 2px solid var(--primary);
  border-radius: 5px;
  color: var(--primary);
  background: transparent;
  transition: 0.6s ease 0s;
  max-width: 10rem;
  max-height: 5rem;
  padding: 7px 15px;
  text-transform: uppercase;
  transition: all 0.2 ease-out;
}

.primary-button:hover {
  background: var(--primary);
  color: var(--bg-light);
  box-shadow: 0px 10px 20px rgba(57, 56, 61, 0.205);
  transform: translateY(-3px) scale(1.1);
}

.social-item:hover {
  filter: brightness(0) saturate(100%) invert(30%) sepia(90%) saturate(5209%) hue-rotate(336deg) brightness(94%) contrast(96%);
}

.social-item {
  background-position: center;
  background-size: cover;
  height: 20px;
  width: 20px;
  color: var(--text);
  filter: brightness(0) saturate(100%) invert(32%) sepia(0%) saturate(3040%) hue-rotate(356deg) brightness(97%) contrast(81%);
}

.social-item-1 {
  background-image: url('./img/icons/icons8-nachricht-gefüllt-50.png');
}

.social-item-2 {
  background-image: url('./img/icons/icons8-linkedin-50.png');
}

.social-item-3 {
  background-image: url('./img/icons/icons8-github-50.png');
}

.timeline-container {
  margin-bottom: 2rem;
  display: flex;
  align-items: center;
  width: 100%;
  position: relative;
}

.diamond {
  width: 40px;
  height: 40px;
  background-color: var(--bg-light);
  border: 1px solid lightgray;
  transform: rotate(45deg);
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  flex-shrink: 0;
}

.diamond span {
  transform: rotate(-45deg);
  font-size: 0.9rem;
  font-weight: bold;
  color: var(--text);
}

.line {
  width: 90%;
  height: 1px;
  background-color: lightgray;
}

.timeline-container .text {
  font-size: 0.8rem;
  color: var(--text);
  margin-top: -30px;
  margin-left: -100px;
  white-space: nowrap;  
  overflow: visible;  
}

.arrow {
  position: absolute;
  display: none;   
}

/*----------------------------------------
### Header
----------------------------------------*/

header {
  position: sticky;
  top: 0;           
  padding: 10px 2rem 0 2rem;
  display: flex;
  justify-content: space-between;
  z-index: 1000; 
  background-color: var(--bg-light);  
}

.logo {
  background-image: url('./img/logos/logo4.png');
  width: 3rem;
  height: 2.5rem;
  background-size: contain;
  background-repeat: no-repeat;
}

nav ul {
  height: 100%;
  list-style: none;
  display: flex;
  gap: 20px;
  justify-content: center;
  align-items: center;
}

nav a {
  font-size: 0.7rem;
}

/*----------------------------------------
### 1. Section: About me
----------------------------------------*/

.image-stack {
  margin: 0 auto;
  position: relative;
  width: 17rem; /* Adjust based on your image size */
  height: 17rem;
  min-width: 200px;
}

.image-background {
  position: absolute;
  left: 10px;
  top: 40px; /* Shift the background layer down */
  width: 70%;
  height: 70%;
  background-color: #d9d9d9; /* Light grey color */
  border-radius: 10px;
  -moz-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
  -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
  z-index: 2;
}

.image-foreground {
  width: 80%;
  height: 80%;
  position: relative;
  left: 30px;
  z-index: 4; /* Ensure it stays on top */
  border-radius: 10px;
  overflow: hidden;
  -moz-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
  -webkit-box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.25);
}

.image-foreground img {
  width: 100%;
  height: 100%;
  border-radius: 10px;
}

.quader {
  top: 180px;
  left: -5px;
  width: 70px;
  height: 70px;
  z-index: 3;
  position: absolute;
  background: transparent;
  background-image: radial-gradient(black 2px, transparent 0);
  -webkit-background-size: 15px 13px;
  background-size: 15px 13px;
}

#section-one .wrapper {
  align-items: center;
  padding: 0 1rem;
  display: flex;
  flex-direction: column;
}

/*----------------------------------------
### 2. Section: Skills
----------------------------------------*/

.hex-grid {
  width: 90vw;
  gap: 5px;
}

.hex-row {
  display: flex;
  justify-content: center;
}
/* ... */

